--- a/assets/style.css
+++ b/assets/style.css
@@ -7,13 +7,14 @@ header,
 footer {
     width: 100%;
     height: 120px;
-    background-color: #00ffff;
+    background-color: #000000;
     color: #000000;
 }
 
 h1,
 h2 {
     text-align: center;
+    color: #ffffff;
 }
 
 img {
@@ -25,19 +26,30 @@ img {
 }
 
 ul {
+    color: #ffffff;
     padding-left: 40px;
     font-size: 20px;
 }
 
 p {
+    color: #ffffff;
     text-align: center;
     font-size: 30px;
   }
 
 .card {
     width: 80%;
+    background-color: #000000;
+    padding: 10px;
     margin: 40px auto;
-    border: 5px solid #000000;
-    box-shadow: -2.5px 5px #00ffff;
+    border: 5px solid #ffffff;
+    box-shadow: -5px 5px #000000;
   }
 
+  details > summary {
+    list-style: none;
+  }
+  
+  details summary::-webkit-details-marker {
+    display:none;
+  }
